# JConfigParser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  unit_tests.yml
benchmark/: benchmark.cpp
doc/: CHAR_TYPE_DESIGN.md  TESTING.md  USAGE.md
example/: CMakeLists.txt  example.cpp  test.cpp
include/JConfigParser/: Node.h
interface/: jconfig_parser_api.h
interface/JConfigParser/: jconfig_parser_api.h
interface/JConfigParser/model/: any.h  node.h
interface/JConfigParser/style/base/: base.h
interface/JConfigParser/style/json/: json.h  json_decoder.h  json_encoder.h
ut/: CMakeLists.txt  unittest.cpp
ut/include/: doctest.h
ut/model/: CMakeLists.txt  any.cpp  node.cpp
